[package]
name = "tcpp"
description = "tcpp wrappings for c/cpp preprocessor"
version = "0.1.0"
authors = ["Phosphorus15 <steepout@qq.com>"]
repository = "https://github.com/Phosphorus15/tcpp-rs"
keywords = ["tcpp", "c", "cpp", "preprocessor"]
categories = ["compiler"]
documentation = "https://docs.rs/tcpp"
license = "MIT/Apache-2.0"
readme = "README.md"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = "1.0.50"

[dependencies]
libc = "0.2.67"